Additional tweaks for page width issues in IE on smaller screens. Move IE styles to separate CSS file for conditional import.

--- a/static/theme-flex/style.css
+++ b/static/theme-flex/style.css
@@ -2662,7 +2662,7 @@ a[href*="#no-click"], img[src*="#no-click"] {
 
 @supports (-ms-ime-align: auto) {
   /* MS Edge styles */
-  article section.page .highlight {
+  article section.page .main-content .highlight {
     position: relative;    
   }
   article section.page pre {
